Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.21****

****	Fix dotted expressions returning "..", bug98. [Saul Cuellar]

* Verilog::Language 3.211 2009/06/17

***	Add SigParser::var callbacks on struct members, bug91. [Saul Cuellar]

***	Add Preproc::defSubstitute define callbacks, bug94. [by Saul Cuellar]

****	Fix parsing empty commas in port lists, bug97.  [Noam Meir]

****	Fix compatibility with Getopt-Long-2.38, rt47030.  [by Marek Rouchal]

****	Fix compile error under GCC 3.3.5.

****	Work around compiler warning when using flex 2.5.35. [Jonathan Kimmitt]

* Verilog::Language 3.210 2009/05/19

***	`__FILE__ now expands to a string, per draft SystemVerilog 2010(ish).

***	Fix parsing external declarations using appropriate class scope.

***	Fix parsing class member variables with multiple qualifiers.

****	Fix Netlist errors with ported interfaces, bug86. [David A]

****	Fix Netlist errors with interfaces-under-interfaces, bug87. [David A]

****	Fix define formal arguments that contain newlines, bug84. [David A]

****	Fix parsing arrayed instances with just "[#]" (no colon).

****	Fix parsing "for (a=0;a;)".

****	Fix parsing "super.new(...)"

* Verilog::Language 3.202 2009/05/01

****	Fix 3.200 mis-inheriting V2K port types.  [Derek Johnstone]

* Verilog::Language 3.201 2009/04/28

****	Fix "abort" compile error.  [Jayanand AK]

* Verilog::Language 3.200 2009/04/15

**	This is a major release that may break some scripts that worked with
	earlier versions.  Some scripts may need modification to work with
 	this version of Verilog-Perl.

**	This package is now licensed under LGPL v3 and/or Artistic v2.0.

**	Verilog::Parser, SigParser and Netlist now support SystemVerilog.

***	Verilog::SigParser's signal_decl and funcsignal callbacks no longer