@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix dotted expressions returning "..", bug98. [Saul Cuellar]
 
+****	Fix Getopt::file_path to expand environment variables in filenames.
+
 * Verilog::Language 3.211 2009/06/17
 
 ***	Add SigParser::var callbacks on struct members, bug91. [Saul Cuellar]
